Added font awesome icon files, added more treatment conditions and plugged in the icons to the footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Sep 23 2020 15:24:52 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 23 2020 23:47:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,7 @@
   <div id="About" class="about_section">
     <div class="main_container">
       <h2 class="section_h2">About</h2>
-      <p class="paragraph-4">Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist. He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine. Dr. Ryu has been in private practice since 1997. Dr. Ryu serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology. He has also been a continuing education instructor for acupuncturists. Dr. Ryu specializes in infertility, allergies, asthma, and pain management for conditions such as back pain and neck pain. <a href="https://www.google.com/url?q=https%3A%2F%2Fsites.google.com%2Fview%2Fryuacupunctureclinic%2Fabout&amp;sa=D&amp;sntz=1&amp;usg=AFQjCNFWJtxqc9yZ-Pnd3N2EUmtrP_MLVA" target="_blank"><strong>Click here</strong></a><strong> </strong>to learn more about Dr. Ryu&#x27;s professional ﻿history!</p>
+      <p class="paragraph-4">Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual.Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual.</p>
       <div class="_2_block_row">
         <div class="_65_block"></div>
         <div class="_35_block">
@@ -53,6 +53,7 @@
               <h3>Sunday:</h3>
               <h3 class="heading-12">CLOSED</h3>
             </div>
+            <h4>Heading</h4>
           </div>
         </div>
       </div>
@@ -86,77 +87,83 @@
       <h3>Suffering from any of these conditions?</h3>
       <div class="w-layout-grid grid">
         <ul role="list" class="list w-list-unstyled">
-          <li class="list-item">Addiction</li>
-          <li class="list-item-2">Allergies</li>
-          <li class="list-item-3">Anxiety</li>
-          <li class="list-item-3">Arthritis</li>
-          <li class="list-item-3">Asthma</li>
-          <li class="list-item-3">Bronchitis</li>
-          <li class="list-item-3">Carpal Tunnel Syndrome</li>
-          <li class="list-item-3">Chronic Fatigue</li>
-          <li class="list-item-3">Colitis</li>
-          <li class="list-item-3">Common Cold</li>
-          <li class="list-item-3">Constipation</li>
-          <li class="list-item-3">Dental Pain</li>
-          <li class="list-item-3">Depression</li>
+          <li class="ailment_list_item">Acid Reflux</li>
+          <li class="ailment_list_item">Addiction</li>
+          <li class="ailment_list_item">Allergies</li>
+          <li class="ailment_list_item">Anxiety</li>
+          <li class="ailment_list_item">Arthritis</li>
+          <li class="ailment_list_item">Asthma</li>
+          <li class="ailment_list_item">Autism</li>
+          <li class="ailment_list_item">Autoimmune Diseases</li>
+          <li class="ailment_list_item">Bronchitis</li>
+          <li class="ailment_list_item">Carpal Tunnel Syndrome</li>
+          <li class="ailment_list_item">Chronic Fatigue</li>
+          <li class="ailment_list_item">Colitis</li>
+          <li class="ailment_list_item">Common Cold</li>
+          <li class="ailment_list_item">Constipation</li>
         </ul>
         <ul role="list" class="list-2 w-list-unstyled">
-          <li class="list-item-4">Diarrhea</li>
-          <li class="list-item-8">Digestive Trouble</li>
-          <li class="list-item-9">Dizziness</li>
-          <li class="list-item-3">Dysentery</li>
-          <li class="list-item-3">Emotional Problems</li>
-          <li class="list-item-3">Eye Problems</li>
-          <li class="list-item-3">Facial Pralysis/Palsy/Tics</li>
-          <li class="list-item-3">Fatigue</li>
-          <li class="list-item-3">Fertility Problems</li>
-          <li class="list-item-3">Fibromyalgia</li>
-          <li class="list-item-3">Gingivitis</li>
-          <li class="list-item-3">Headache</li>
-          <li class="list-item-3">Hiccups</li>
+          <li class="ailment_list_item">Dental Pain</li>
+          <li class="ailment_list_item">Depression</li>
+          <li class="ailment_list_item">Digestive Trouble</li>
+          <li class="ailment_list_item">Dizziness</li>
+          <li class="ailment_list_item">Dysentery</li>
+          <li class="ailment_list_item">Emotional Problems</li>
+          <li class="ailment_list_item">Eye Problems</li>
+          <li class="ailment_list_item">Facial Pralysis/Palsy/Tics</li>
+          <li class="ailment_list_item">Fatigue</li>
+          <li class="ailment_list_item">Fertility Problems</li>
+          <li class="ailment_list_item">Fibromyalgia</li>
+          <li class="ailment_list_item">Gingivitis</li>
+          <li class="ailment_list_item">Headache</li>
         </ul>
         <ul role="list" class="list-3 w-list-unstyled">
-          <li class="list-item-5">Immune System Support</li>
-          <li class="list-item-10">Incontinence</li>
-          <li class="list-item-11">Indigestion</li>
-          <li class="list-item-3">Insomina</li>
-          <li class="list-item-3">Irritable Bowel Syndrome - IBS</li>
-          <li class="list-item-3">Low Back Pain</li>
-          <li class="list-item-3">Menstrual Irregularities</li>
-          <li class="list-item-3">Migraine</li>
-          <li class="list-item-3">Morning Sickness</li>
-          <li class="list-item-3">Nausea</li>
-          <li class="list-item-3">Neck Injury</li>
-          <li class="list-item-3">Occupational Injury</li>
-          <li class="list-item-3">Ostoarthritis</li>
+          <li class="ailment_list_item">Heart Conditions</li>
+          <li class="ailment_list_item">Hiccups</li>
+          <li class="ailment_list_item">Immune System Support</li>
+          <li class="ailment_list_item">Incontinence</li>
+          <li class="ailment_list_item">Indigestion</li>
+          <li class="ailment_list_item">Infertility</li>
+          <li class="ailment_list_item">Insomina</li>
+          <li class="ailment_list_item">Irritable Bowel Syndrome - IBS</li>
+          <li class="ailment_list_item">Knee Pain</li>
+          <li class="ailment_list_item">Low Back Pain</li>
+          <li class="ailment_list_item">Menstrual Irregularities</li>
+          <li class="ailment_list_item">Migraine</li>
+          <li class="ailment_list_item">Morning Sickness</li>
+          <li class="ailment_list_item">Nausea</li>
         </ul>
         <ul role="list" class="list-4 w-list-unstyled">
-          <li class="list-item-6">Pain Management</li>
-          <li class="list-item-12">Personal Injury</li>
-          <li class="list-item-13">PMS</li>
-          <li class="list-item-3">Pneumonia</li>
-          <li class="list-item-3">Reproductive Problems</li>
-          <li class="list-item-3">Rhinitis</li>
-          <li class="list-item-3">Sciatica</li>
-          <li class="list-item-3">Seasonal Affective Disorder - SAD</li>
-          <li class="list-item-3">Shoulder Pain</li>
-          <li class="list-item-3">Sinusitis</li>
-          <li class="list-item-3">Sleep Disturbances</li>
-          <li class="list-item-3">Smoking Cessation</li>
-          <li class="list-item-3">Sore Throat</li>
+          <li class="ailment_list_item">Neck Pain</li>
+          <li class="ailment_list_item">Occupational Injury</li>
+          <li class="ailment_list_item">Ostoarthritis</li>
+          <li class="ailment_list_item">Pain Management</li>
+          <li class="ailment_list_item">Personal Injury</li>
+          <li class="ailment_list_item">Pinched Nerve</li>
+          <li class="ailment_list_item">PMS</li>
+          <li class="ailment_list_item">Pneumonia</li>
+          <li class="ailment_list_item">Reproductive Problems</li>
+          <li class="ailment_list_item">Rhinitis</li>
+          <li class="ailment_list_item">Sciatica</li>
+          <li class="ailment_list_item">Seasonal Affective Disorder - SAD</li>
+          <li class="ailment_list_item">Shoulder Pain</li>
+          <li class="ailment_list_item">Sinusitis</li>
         </ul>
         <ul role="list" class="list-5 w-list-unstyled">
-          <li class="list-item-7">Sports Injury</li>
-          <li class="list-item-14">Stress</li>
-          <li class="list-item-15">Tennis Elbow</li>
-          <li class="list-item-3">Tonsiillitis</li>
-          <li class="list-item-3">Trigeminal Neuralgia</li>
-          <li class="list-item-3">Upper Back Pain</li>
-          <li class="list-item-3">Urinary Tract Infection</li>
-          <li class="list-item-3">Valley Fever</li>
-          <li class="list-item-3">Vomiting</li>
-          <li class="list-item-3">Weight Loss</li>
-          <li class="list-item-3">Wrist Pain</li>
+          <li class="ailment_list_item">Sleep Disturbances</li>
+          <li class="ailment_list_item">Smoking Cessation</li>
+          <li class="ailment_list_item">Sore Throat</li>
+          <li class="ailment_list_item">Sports Injury</li>
+          <li class="ailment_list_item">Stress</li>
+          <li class="ailment_list_item">Tennis Elbow</li>
+          <li class="ailment_list_item">Tonsiillitis</li>
+          <li class="ailment_list_item">Trigeminal Neuralgia</li>
+          <li class="ailment_list_item">Upper Back Pain</li>
+          <li class="ailment_list_item">Urinary Tract Infection</li>
+          <li class="ailment_list_item">Valley Fever</li>
+          <li class="ailment_list_item">Vomiting</li>
+          <li class="ailment_list_item">Weight Loss</li>
+          <li class="ailment_list_item">Wrist Pain</li>
         </ul>
       </div>
     </div>
@@ -303,7 +310,7 @@
               <li>Text: (909) 566-2258</li>
               <li>Fax: (818) 841-9092</li>
               <li class="footer_link-2"><a href="mailto:jb@johnbarrett.io" class="footer_link-2">ryuacupuncture@yahoo.com</a></li>
-              <li class="footer_list_item"><a href="https://www.linkedin.com/in/barrettjj/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://github.com/JohnJBarrett22" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a></li>
+              <li class="footer_list_item"><a href="https://www.linkedin.com/in/barrettjj/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://github.com/JohnJBarrett22" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a></li>
             </ul>
           </div>
         </div>
