--- a/testimonials.html
+++ b/testimonials.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Sep 23 2020 15:24:52 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 23 2020 23:47:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -84,7 +84,7 @@
               <li>Text: (909) 566-2258</li>
               <li>Fax: (818) 841-9092</li>
               <li class="footer_link-2"><a href="mailto:jb@johnbarrett.io" class="footer_link-2">ryuacupuncture@yahoo.com</a></li>
-              <li class="footer_list_item"><a href="https://www.linkedin.com/in/barrettjj/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://github.com/JohnJBarrett22" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a></li>
+              <li class="footer_list_item"><a href="https://www.linkedin.com/in/barrettjj/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://github.com/JohnJBarrett22" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a></li>
             </ul>
           </div>
         </div>
