Fixed social media links

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Sep 23 2020 23:47:54 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Sep 24 2020 20:53:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afc5b29e53f4b7461193" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -95,9 +95,9 @@
               <li>Burbank, CA 91505</li>
               <li>Phone: (818) 841-9790</li>
               <li>Text: (909) 566-2258</li>
-              <li>Fax: (818) 841-9092</li>
-              <li class="footer_link-2"><a href="mailto:jb@johnbarrett.io" class="footer_link-2">ryuacupuncture@yahoo.com</a></li>
-              <li class="footer_list_item"><a href="https://www.linkedin.com/in/barrettjj/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://github.com/JohnJBarrett22" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a></li>
+              <li>Fax: <a href="tel:8188419092" class="footer_link-2">(818) 841-9092</a></li>
+              <li class="footer_link-2"><a href="mailto:ryuacupuncture@yahoo.com" class="footer_link-2">ryuacupuncture@yahoo.com</a></li>
+              <li class="footer_list_item"><a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-inc-burbank" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.facebook.com/pages/Ryu%20Acupuncture%20Clinic/110015192394728/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a></li>
             </ul>
           </div>
         </div>
