--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Thu Sep 24 2020 20:53:29 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Sep 25 2020 05:33:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -280,7 +280,7 @@
               <li class="footer_link"><a href="contact.html" class="link_white">Contact</a></li>
             </ul>
             <ul role="list" class="w-list-unstyled">
-              <li class="footer_link"><a href="#" class="link_white">Terms of Use</a></li>
+              <li class="footer_link"><a href="index.html" aria-current="page" class="link_white w--current">Terms of Use</a></li>
               <li class="footer_link"><a href="#" class="link_white">Privacy Policy</a></li>
               <li class="footer_link"><a href="#" class="link_white">Site Map</a></li>
             </ul>
@@ -304,13 +304,13 @@
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="w-list-unstyled">
-              <li>3808 W. Riverside Dr. - Suite 510</li>
+              <li><a href="#" class="footer_link">3808 W. Riverside Dr. - Suite 510</a></li>
               <li>Burbank, CA 91505</li>
-              <li>Phone: (818) 841-9790</li>
-              <li>Text: (909) 566-2258</li>
-              <li>Fax: <a href="tel:8188419092" class="footer_link-2">(818) 841-9092</a></li>
-              <li class="footer_link-2"><a href="mailto:ryuacupuncture@yahoo.com" class="footer_link-2">ryuacupuncture@yahoo.com</a></li>
-              <li class="footer_list_item"><a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-inc-burbank" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.facebook.com/pages/Ryu%20Acupuncture%20Clinic/110015192394728/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a></li>
+              <li>Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
+              <li>Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a></li>
+              <li>Fax: <a href="tel:8188419092" class="footer_link">(818) 841-9092</a></li>
+              <li class="footer_link-2"><a href="mailto:ryuacupuncture@yahoo.com" class="footer_link">ryuacupuncture@yahoo.com</a></li>
+              <li class="footer_list_item"><a href="https://www.facebook.com/pages/Ryu%20Acupuncture%20Clinic/110015192394728/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-inc-burbank" target="_blank" class="footer_link-2 footer_icon"></a><a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a></li>
             </ul>
           </div>
         </div>
