Finished uploading Yelp reviews, may still add any pictures and prior reviews

--- a/testimonials.html
+++ b/testimonials.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Sep 25 2020 13:13:37 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Sep 25 2020 13:26:59 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -689,8 +689,22 @@
       <div class="testimonial_block_white"><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star_full">
         <p class="testimonial_para">&quot;I have had great health all  my life, so I know what that feels like.  Last fall I got ill from some kind of infection, lyme type disease.  Pains in my hands and feet, extreme exhaustion, sweating, and joint pain.  I went to many different so called traditional doctors.  I was given antibiotics which I think   really saved me, but continued to be terribly ill.  The after effects continued and I  was told everything from being called the mystery woman, to ...well no one is that healthy as they get older, to being told you just have to live with it.  Then I discovered Ryu Acupuncture.<br><br>Thank you Dr. Ryu.  I can only simply say, his treatments made me better, he is practical and smart, and the best.<br><br>Natsuko Ohama&quot;</p><img src="images/default_testimonial.png" loading="lazy" alt="" class="testimonial_image">
         <div class="testimonial_author">Natsuko O.</div>
-        <div class="testimonial_location">Burbank, CA</div>
-        <div class="testimonial_date">01/26/2010</div>
+        <div class="testimonial_location">Los Angeles, CA</div>
+        <div class="testimonial_date">04/28/2009</div>
+        <div class="testimonial_source">Review from Yelp!</div>
+      </div>
+      <div class="testimonial_block_white"><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star_full">
+        <p class="testimonial_para">&quot;Dr. Ryu is good and knows what he is doing. I was hesitant about trying Acupuncture and hate needles. But it was 2 weeks and i still had pain in my ankle and swelling, so i thought i would give it a try.<br>   First visit I came in on cructhes for a sprained ankle. In about 30 mins , I was walking without my crutches with little pain and little discomfort. 2nd visit I was there for about 30mins, the next day I noticed a big difference., my swelling came down and i had little pain. My final visit, i virtually had no more pain and swelling.  I highly  recommend Dr. Ryu!&quot;</p><img src="images/default_testimonial.png" loading="lazy" alt="" class="testimonial_image">
+        <div class="testimonial_author">Mark S.</div>
+        <div class="testimonial_location">Los Angeles, CA</div>
+        <div class="testimonial_date">03/17/2009</div>
+        <div class="testimonial_source">Review from Yelp!</div>
+      </div>
+      <div class="testimonial_block_white"><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star_full">
+        <p class="testimonial_para">&quot;If you&#x27;re concern has ever been that you may have to have any kind of surgery for a problem you have, first go to Dr. Ryu and he will take care of your problem without surgery.<br><br>I&#x27;m just fed up with western medicine and am convinced that it is a conspiracy. I myself suffered from kidney stones and it wasn&#x27;t until 12 years later of kidney stones and never solving the problem, that I finally went to Dr. Ryu. He did a few treatments and I haven&#x27;t had any more problems.<br><br>I also flew my sister up here from New Mexico because she was told she had to have a brain surgery for someting called tri-geminal neuralgia. Her pain was excruciating. She went to Dr. Ryu and her pain went away.  <br><br>He is amazing. I will always refer my friends and family to him. Not only is he competent, he is kind and caring. He really explains the whole process to you and really helps you to understand how to heal your sickness, not just to cover up the symptoms.<br><br>Go to Dr. Ryu no matter the physical ailment. You won&#x27;t regret it.<br>I noticed that one of the previous reviews said that the needles hurt like hell, that is not true. I&#x27;m sure it depends on the treatment as well but in my experience the treatment has never been uncomfortable.<br>Peace, - PJ&quot;</p><img src="images/jose_L.jpg" loading="lazy" alt="" class="testimonial_image">
+        <div class="testimonial_author">Jose L.</div>
+        <div class="testimonial_location">Rosemead, CA</div>
+        <div class="testimonial_date">04/20/2008</div>
         <div class="testimonial_source">Review from Yelp!</div>
       </div>
     </div>
