--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Sep 25 2020 15:55:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Sep 26 2020 05:06:26 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
   </div>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container"><a href="#" class="brand w-nav-brand"></a>
-      <nav role="navigation" class="w-nav-menu"><a href="index.html" aria-current="page" class="w-nav-link w--current">Home</a><a href="about.html" class="w-nav-link">About</a><a href="services.html" class="w-nav-link">Services</a><a href="testimonials.html" class="w-nav-link">Testimonials</a><a href="contact.html" class="w-nav-link">Contact</a></nav>
+      <nav role="navigation" class="w-nav-menu"><a href="index.html" aria-current="page" class="w-nav-link w--current">Home</a><a href="team.html" class="w-nav-link">Team</a><a href="services.html" class="w-nav-link">Services</a><a href="conditions-treated.html" class="w-nav-link">Conditions Treated</a><a href="testimonials.html" class="w-nav-link">Testimonials</a><a href="contact.html" class="w-nav-link">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
@@ -33,29 +33,32 @@
     <div class="main_container">
       <h2 class="section_h2">About</h2>
       <p class="paragraph-4">Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual.Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual.</p>
+      <h4 class="heading-13">Unsure about the layout here...working on it</h4>
       <div class="_2_block_row">
-        <div class="_65_block"></div>
-        <div class="_35_block">
-          <div class="div-block">
-            <div class="w-layout-grid grid-2">
-              <h3>Monday:</h3>
-              <h3 class="heading-6">9:30AM - 6PM</h3>
-              <h3>Tuesday:</h3>
-              <h3 class="heading-7">10AM - 2PM</h3>
-              <h3>Wednesday:</h3>
-              <h3 class="heading-8">9:30AM - 6PM</h3>
-              <h3>Thursday:</h3>
-              <h3 class="heading-9">10AM - 2PM</h3>
-              <h3>Friday:</h3>
-              <h3 class="heading-10">9:30AM - 6PM</h3>
-              <h3>Saturday:</h3>
-              <h3 class="heading-11">9AM - 2PM</h3>
-              <h3>Sunday:</h3>
-              <h3 class="heading-12">CLOSED</h3>
-            </div>
-            <h4>Two-hour free parking is available on the street. Paid parking lot is available in the back.</h4>
-          </div>
+        <div class="_65_block">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
         </div>
+        <div class="_35_block">
+          <div class="div-block"></div>
+        </div>
+      </div>
+      <div class="w-layout-grid grid-2">
+        <h3>Monday:</h3>
+        <h3 class="heading-6">9:30AM - 6PM</h3>
+        <h3>Tuesday:</h3>
+        <h3 class="heading-7">10AM - 2PM</h3>
+        <h3>Wednesday:</h3>
+        <h3 class="heading-8">9:30AM - 6PM</h3>
+        <h3>Thursday:</h3>
+        <h3 class="heading-9">10AM - 2PM</h3>
+        <h3>Friday:</h3>
+        <h3 class="heading-10">9:30AM - 6PM</h3>
+        <h3>Saturday:</h3>
+        <h3 class="heading-11">9AM - 2PM</h3>
+        <h3>Sunday:</h3>
+        <h3 class="heading-12">CLOSED</h3>
       </div>
     </div>
   </div>
@@ -72,101 +75,34 @@
           <h3 class="card_h3">Acupuncture</h3>
           <p class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
+        <div id="w-node-bb3cbd291f03-bfb09bd8" class="card_block">
+          <div class="crads_img_mask"><img src="images/chinese_herbs.jpg" srcset="images/chinese_herbs-p-500.jpeg 500w, images/chinese_herbs-p-1080.jpeg 1080w, images/chinese_herbs.jpg 1430w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 32vw, 31vw" alt="" class="cards_img"></div>
+          <h3 id="w-node-bb3cbd291f06-bfb09bd8" class="card_h3">Traditional Chinese Herbs</h3>
+          <p id="w-node-bb3cbd291f08-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+        </div>
         <div id="w-node-bb3cbd291efc-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/cupping.jpg" srcset="images/cupping-p-500.jpeg 500w, images/cupping-p-800.jpeg 800w, images/cupping.jpg 900w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 32vw, 31vw" alt="" class="cards_img"></div>
           <h3 id="w-node-bb3cbd291eff-bfb09bd8" class="card_h3">Cupping</h3>
           <p id="w-node-bb3cbd291f01-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
-        <div id="w-node-bb3cbd291f03-bfb09bd8" class="card">
-          <div class="crads_img_mask"><img src="images/chinese_herbs.jpg" srcset="images/chinese_herbs-p-500.jpeg 500w, images/chinese_herbs-p-1080.jpeg 1080w, images/chinese_herbs.jpg 1430w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 32vw, 31vw" alt="" class="cards_img"></div>
-          <h3 id="w-node-bb3cbd291f06-bfb09bd8" class="card_h3">Traditional Chinese Herbs</h3>
-          <p id="w-node-bb3cbd291f08-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+      </div>
+      <div class="cards_grid">
+        <div id="w-node-7dade4327f0e-bfb09bd8" class="card_block">
+          <div class="crads_img_mask"><img src="images/auriculotherapy.jpg" alt="" class="cards_img"></div>
+          <h3 class="card_h3">Auriculotherapy</h3>
+          <p class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
-      </div>
-      <p class="main_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-      <h3>Suffering from any of these conditions?</h3>
-      <div class="w-layout-grid grid">
-        <ul role="list" class="list w-list-unstyled">
-          <li class="ailment_list_item">Acid Reflux</li>
-          <li class="ailment_list_item">Addiction</li>
-          <li class="ailment_list_item">Allergies</li>
-          <li class="ailment_list_item">Anxiety</li>
-          <li class="ailment_list_item">Arthritis</li>
-          <li class="ailment_list_item">Asthma</li>
-          <li class="ailment_list_item">Autism</li>
-          <li class="ailment_list_item">Autoimmune Diseases</li>
-          <li class="ailment_list_item">Bronchitis</li>
-          <li class="ailment_list_item">Carpal Tunnel Syndrome</li>
-          <li class="ailment_list_item">Chronic Fatigue</li>
-          <li class="ailment_list_item">Colitis</li>
-          <li class="ailment_list_item">Common Cold</li>
-          <li class="ailment_list_item">Constipation</li>
-        </ul>
-        <ul role="list" class="list-2 w-list-unstyled">
-          <li class="ailment_list_item">Dental Pain</li>
-          <li class="ailment_list_item">Depression</li>
-          <li class="ailment_list_item">Digestive Trouble</li>
-          <li class="ailment_list_item">Dizziness</li>
-          <li class="ailment_list_item">Dysentery</li>
-          <li class="ailment_list_item">Emotional Problems</li>
-          <li class="ailment_list_item">Eye Problems</li>
-          <li class="ailment_list_item">Facial Pralysis/Palsy/Tics</li>
-          <li class="ailment_list_item">Fatigue</li>
-          <li class="ailment_list_item">Fertility Problems</li>
-          <li class="ailment_list_item">Fibromyalgia</li>
-          <li class="ailment_list_item">Gingivitis</li>
-          <li class="ailment_list_item">Headache</li>
-        </ul>
-        <ul role="list" class="list-3 w-list-unstyled">
-          <li class="ailment_list_item">Heart Conditions</li>
-          <li class="ailment_list_item">Hiccups</li>
-          <li class="ailment_list_item">Immune System Support</li>
-          <li class="ailment_list_item">Incontinence</li>
-          <li class="ailment_list_item">Indigestion</li>
-          <li class="ailment_list_item">Infertility</li>
-          <li class="ailment_list_item">Insomina</li>
-          <li class="ailment_list_item">Irritable Bowel Syndrome - IBS</li>
-          <li class="ailment_list_item">Knee Pain</li>
-          <li class="ailment_list_item">Low Back Pain</li>
-          <li class="ailment_list_item">Menstrual Irregularities</li>
-          <li class="ailment_list_item">Migraine</li>
-          <li class="ailment_list_item">Morning Sickness</li>
-          <li class="ailment_list_item">Nausea</li>
-        </ul>
-        <ul role="list" class="list-4 w-list-unstyled">
-          <li class="ailment_list_item">Neck Pain</li>
-          <li class="ailment_list_item">Occupational Injury</li>
-          <li class="ailment_list_item">Ostoarthritis</li>
-          <li class="ailment_list_item">Pain Management</li>
-          <li class="ailment_list_item">Personal Injury</li>
-          <li class="ailment_list_item">Pinched Nerve</li>
-          <li class="ailment_list_item">PMS</li>
-          <li class="ailment_list_item">Pneumonia</li>
-          <li class="ailment_list_item">Reproductive Problems</li>
-          <li class="ailment_list_item">Rhinitis</li>
-          <li class="ailment_list_item">Sciatica</li>
-          <li class="ailment_list_item">Seasonal Affective Disorder - SAD</li>
-          <li class="ailment_list_item">Shoulder Pain</li>
-          <li class="ailment_list_item">Sinusitis</li>
-        </ul>
-        <ul role="list" class="list-5 w-list-unstyled">
-          <li class="ailment_list_item">Sleep Disturbances</li>
-          <li class="ailment_list_item">Smoking Cessation</li>
-          <li class="ailment_list_item">Sore Throat</li>
-          <li class="ailment_list_item">Sports Injury</li>
-          <li class="ailment_list_item">Stress</li>
-          <li class="ailment_list_item">Tennis Elbow</li>
-          <li class="ailment_list_item">Tonsiillitis</li>
-          <li class="ailment_list_item">Trigeminal Neuralgia</li>
-          <li class="ailment_list_item">Upper Back Pain</li>
-          <li class="ailment_list_item">Urinary Tract Infection</li>
-          <li class="ailment_list_item">Valley Fever</li>
-          <li class="ailment_list_item">Vomiting</li>
-          <li class="ailment_list_item">Weight Loss</li>
-          <li class="ailment_list_item">Wrist Pain</li>
-        </ul>
-      </div>
-    </div>
+        <div id="w-node-7dade4327f15-bfb09bd8" class="card_block">
+          <div class="crads_img_mask"><img src="images/moxibustion.jpg" alt="" class="cards_img"></div>
+          <h3 id="w-node-7dade4327f18-bfb09bd8" class="card_h3">Moxibustion</h3>
+          <p id="w-node-7dade4327f1a-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+        </div>
+        <div id="w-node-7dade4327f1c-bfb09bd8" class="card">
+          <div class="crads_img_mask"><img src="images/infrared_light_treatment.jpg" srcset="images/infrared_light_treatment-p-500.jpeg 500w, images/infrared_light_treatment.jpg 679w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 32vw, 31vw" alt="" class="cards_img"></div>
+          <h3 id="w-node-7dade4327f1f-bfb09bd8" class="card_h3">Heat Therapy</h3>
+          <p id="w-node-7dade4327f21-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+        </div>
+      </div><a href="services.html" class="ryu_button w-button">Learn More</a></div>
   </div>
   <div class="parallax_section">
     <div class="parallax_block_cupping"></div>
@@ -232,14 +168,14 @@
         </div>
       </div>
     </div>
-    <div class="horizontal_progress"></div>
-  </div>
+    <div class="horizontal_progress"></div><a href="services.html" class="ryu_button_testimonial w-button">See All</a></div>
   <div class="parallax_section">
     <div class="parallax_block_needles"></div>
   </div>
   <div id="Contact" class="contact_section">
     <div class="main_container">
       <h1 class="section_h2">Contact Us</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <div class="_2_block_row">
         <div class="_2_block">
           <div class="w-widget w-widget-map"></div>
@@ -274,7 +210,7 @@
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
-              <li class="footer_link"><a href="about.html" class="link_white">About</a></li>
+              <li class="footer_link"><a href="team.html" class="link_white">About</a></li>
               <li class="footer_link"><a href="services.html" class="link_white">Services</a></li>
               <li class="footer_link"><a href="testimonials.html" class="link_white">Testimonials</a></li>
               <li class="footer_link"><a href="contact.html" class="link_white">Contact</a></li>
