--- a/testimonials.html
+++ b/testimonials.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Sep 25 2020 15:55:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Sep 26 2020 05:06:26 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container"><a href="#" class="brand w-nav-brand"></a>
-      <nav role="navigation" class="w-nav-menu"><a href="index.html" class="w-nav-link">Home</a><a href="about.html" class="w-nav-link">About</a><a href="services.html" class="w-nav-link">Services</a><a href="testimonials.html" aria-current="page" class="w-nav-link w--current">Testimonials</a><a href="contact.html" class="w-nav-link">Contact</a></nav>
+      <nav role="navigation" class="w-nav-menu"><a href="index.html" class="w-nav-link">Home</a><a href="team.html" class="w-nav-link">Team</a><a href="services.html" class="w-nav-link">Services</a><a href="conditions-treated.html" class="w-nav-link">Conditions Treated</a><a href="testimonials.html" aria-current="page" class="w-nav-link w--current">Testimonials</a><a href="contact.html" class="w-nav-link">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
@@ -28,7 +28,7 @@
   <div class="testimonial_page_section">
     <div class="main_container mix-container">
       <h2 class="section_h2">Testimonials</h2>
-      <div class="filter-controls"><a data-filter="all" href="#" class="filter-button w-button">All</a><a data-filter=".yelp" href="#" class="filter-button w-button">Yelp</a><a data-filter=".2009" href="#" class="filter-button w-button">Google</a><a href="#" class="filter-button w-button">Facebook</a></div>
+      <div class="filter-controls"><a data-filter="all" href="#" class="filter-button ryu_testimonial_button w-button">All</a><a data-filter=".yelp" href="#" class="filter-button ryu_testimonial_button w-button">Yelp</a><a data-filter=".2009" href="#" class="filter-button ryu_testimonial_button w-button">Google</a><a href="#" class="filter-button ryu_testimonial_button w-button">Facebook</a></div>
       <div class="testimonial_block_white mix yelp _2020"><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star_full">
         <p class="testimonial_para">&quot;This is my second review because we were successful to have another child after receiving acupuncture and herbal treatment from Dr. Ryu! We had our first child in 2016 after getting both acpuncture and herbal treatment for 18 months. Our first IVF was successful. For our second child, I had treaent for about 4 months with Dr Ryu and had a cold transfer. Now our daughter is 3 yo and our son is 3 mons old. They&#x27;re both healthy as they can be and so am I. This is all thanks to Dr. Ryu. Not only I was able to get pregnant twice, my over all health was improved--mostly chronic back pain and severe allergy. Without his treatment, it would be very difficult to get pregnant in such a short period of time.&quot;</p><img src="images/default_testimonial.png" loading="lazy" alt="" class="testimonial_image">
         <div class="testimonial_author">Sakie M.</div>
@@ -725,7 +725,7 @@
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
-              <li class="footer_link"><a href="about.html" class="link_white">About</a></li>
+              <li class="footer_link"><a href="team.html" class="link_white">About</a></li>
               <li class="footer_link"><a href="services.html" class="link_white">Services</a></li>
               <li class="footer_link"><a href="testimonials.html" aria-current="page" class="link_white w--current">Testimonials</a></li>
               <li class="footer_link"><a href="contact.html" class="link_white">Contact</a></li>
